Refactor url check, switch to new API